--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  overflow: hidden;
+  font-weight: 700;
+  color: white;
+  font-size: 0.875rem;
+  line-height: 1.25;
+  background-color: #f8fbff;
+}
+
+.content.container {
+  @apply w-full;
+  @apply overflow-x-hidden;
+}
+
+@screen lg {
+  .content.container {
+    width: 90%;
+  }
+}
